hmtl framework and css start

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./resources//css/style.css">
+        <script src="https://kit.fontawesome.com/793826f743.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -18,10 +19,30 @@
         <![endif]-->
         
         <script src="" async defer></script>
-
+        <!--Landing Page-->
         <h1 class="title">Discover Hidden Places In The World Around You</h1>
 
         <span class="app_link">Download Excursion</span>
-    
+
+        <div id="phone_video">
+        <span><img src="./resources/images/phone.png" alt="iphone"/></span>
+        </div>
+
+        <div id="features">
+        <h1 class="section_title">Your Personal Travel Guide</h1>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <span><img src="./resources/images/camp.png" alt="campground"/></span>
+        </div>
+        <div id="info">
+        <span></span><!--Font Awesome coming soon-->
+        <h1 class="title">Coming Soon For iPhone and Android</h1>
+        <span class="app_link">Download Excursion</span>
+        </div>
+        <footer id="copyright">
+            <p><i class="fas fa-copyright"></i> Excursion </p>
+        </footer>
+
     </body>
+
+
 </html>
