HTML complete and CSS complete

--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
         <!--Landing Page-->
         <h1 class="title">Discover Hidden Places In The World Around You</h1>
 
-        <span class="app_link">Download Excursion</span>
+        <span class="app_link"><a href="">Download Excursion</a></span>
 
         <div id="phone_video">
-        <span><img src="./resources/images/phone.png" alt="iphone"/></span>
+        <span><video controls autoplay><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></span>
         </div>
-
         <div id="features">
         <h1 class="section_title">Your Personal Travel Guide</h1>
         <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-        <span><img src="./resources/images/camp.png" alt="campground"/></span>
+        <span><img src="resources/images/camp.jpg" alt="campground"/></span>
         </div>
         <div id="info">
-        <span></span><!--Font Awesome coming soon-->
+        <span><img src="resources/images/phone.png"></span>
         <h1 class="title">Coming Soon For iPhone and Android</h1>
         <span class="app_link">Download Excursion</span>
         </div>
